--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-ejs": "^2.0.0",
     "express-ejs-layouts": "^2.5.1",
     "layouts": "^3.0.2",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
